--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="mt-4 row" style="display: flex;justify-content: center;align-items: center;">
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div>
-            <img class="img-fluid" src="/img/logo.jpg" alt="">
+            <img class="img-fluid" src="./img/logo.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
