--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/6225a2fe4d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>VinhThinhHai</title>
 </head>
 
@@ -41,7 +41,7 @@
                   Giới thiệu
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Tổng quang công ty</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./gioithieu/tongquancongty.html">Tổng quan công ty</a></li>
                   <li><a class="dropdown-item" href="#">Cơ cấu tổ chức</a></li>
                   <li><a class="dropdown-item" href="#">Khách hàng đối tác</a></li>
                   <li><a class="dropdown-item" href="#">Chính sách nhân sự</a></li>
@@ -386,12 +386,12 @@
     </div>
   </section>
   <div class="fixed-contract">
-    <div class="header-contract"><a target="blank_" href="#"><i class="fa-solid fa-phone "></i></a>
+    <div class="header-contract"><p ><i class="fa-solid fa-phone "></i></p>
       <div class="support-contract">
         0905418161
       </div>
     </div>
-    <div class="header-contract"><a target="blank_" href="#"><i class="fa-solid fa-envelope"></i></a>
+    <div class="header-contract"><p ><i class="fa-solid fa-envelope"></i></p>
       <div class="support-contract">
         hotro@dangkykinhdoanh.gov.vn
       </div>
