--- a/gioithieu/tongquancongty.html
+++ b/gioithieu/tongquancongty.html
@@ -19,7 +19,7 @@
 
 <body>
     <section class="container-navbar">
-        <div class="container" >
+        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html">
@@ -41,11 +41,14 @@
                                     Giới thiệu
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" target="blank_"
-                                            href="./gioithieu/tongquancongty.html">Tổng quan công ty</a></li>
-                                    <li><a class="dropdown-item" href="#">Cơ cấu tổ chức</a></li>
-                                    <li><a class="dropdown-item" href="#">Khách hàng đối tác</a></li>
-                                    <li><a class="dropdown-item" href="#">Chính sách nhân sự</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="./tongquancongty.html">Tổng quan
+                                            công ty</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="./cocautochuc.html">Cơ
+                                            cấu tổ chức</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="./khachhangdoitac.html">Khách
+                                            hàng đối tác</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="./chinhsachnhansu.html">Chính
+                                            sách nhân sự</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
@@ -54,9 +57,9 @@
                                     Tin tức
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Tin công ty</a></li>
-                                    <li><a class="dropdown-item" href="#">Tin công trình</a></li>
-                                    <li><a class="dropdown-item" href="#">Tin đoàn thể</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="../tintuc/tincongty.html">Tin công ty</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="../tintuc/tincongtrinh.html">Tin công trình</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="../tintuc/tindoanthe.html">Tin đoàn thể</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
@@ -70,8 +73,8 @@
                                             <div class="col-lg-3 col-md-6 col-sm-12">
                                                 <h6>Theo dự án</h6>
                                                 <ul>
-                                                    <li><a class="dropdown-item" href="#">Thiết kế thi công</a></li>
-                                                    <li><a class="dropdown-item" href="#">Dán dựng</a></li>
+                                                    <li><a class="dropdown-item" target="blank_" href="../duan/thietkethicong.html">Thiết kế thi công</a></li>
+                                                    <li><a class="dropdown-item" target="blank_" href="../duan/dandung.html">Dán dựng</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-lg-3 col-md-6 col-sm-12">
@@ -113,15 +116,15 @@
                                     Thư viện
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Hình ảnh</a></li>
-                                    <li><a class="dropdown-item" href="#">Video</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="../thuvien/hinhanh.html">Hình ảnh</a></li>
+                                    <li><a class="dropdown-item" target="blank_" href="../thuvien/video.html">Video</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Tuyển dụng</a>
+                                <a class="nav-link active" aria-current="page" target="blank_" href="../tuyendung.html">Tuyển dụng</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
+                                <a class="nav-link active" aria-current="page" target="blank_" href="../lienhe.html" >Liên hệ</a>
                             </li>
                         </ul>
                     </div>
@@ -129,7 +132,8 @@
             </nav>
     </section>
     <section class="section-overview">
-        <div class="container"  style="padding:40px;border: 1px solid #EEE; box-shadow: 1px 1px 10px 0 rgb(87 87 87 / 22%);">
+        <div class="container"
+            style="padding:40px;border: 1px solid #EEE; box-shadow: 1px 1px 10px 0 rgb(87 87 87 / 22%);">
             <h3 class="tittle-h3">
                 Tổng Quan công ty
             </h3>
@@ -213,7 +217,7 @@
                                 <div style="text-align: justify;">
                                     <div>
                                         <p>Việt Nam đang là điểm đến hấp dẫn của các nhà đầu tư bất động sản trên thế
-                                            giới vì vậy để trở thành một công ty xây dựng ngày càng lớn mạnh Tân Minh
+                                            giới vì vậy để trở thành một công ty xây dựng ngày càng lớn mạnh Vinh Thịnh Hải
                                             Nhân không ngừng nâng cao mở rộng phát triển thị trường và luôn cam kết mang
                                             đến cho đối tác sự hài lòng nhất.</p>
                                     </div>
@@ -246,7 +250,7 @@
                                                 Minh Nhân.</li>
                                             <li style="text-align: justify;">Thiết lập môi trường làm việc chuyên
                                                 nghiệp, thân thiện và tôn trọng lẫn nhau.</li>
-                                            <li style="text-align: justify;">Đối với đối tác và khách hàng, Tân Minh
+                                            <li style="text-align: justify;">Đối với đối tác và khách hàng, Vinh Thịnh Hải
                                                 Nhân xây dựng trên nền tảng công bằng, trung thực, tôn trọng và uy tín.
                                             </li>
                                         </ul>
@@ -268,7 +272,8 @@
                                                     <div>
                                                         <div>
                                                             <p style="text-align: justify;">Với phương châm “tuổi trẻ,
-                                                                năng động, sáng tạo, hiệu quả”, Vinh Thịnh Hải luôn không
+                                                                năng động, sáng tạo, hiệu quả”, Vinh Thịnh Hải luôn
+                                                                không
                                                                 ngừng cải thiện để ngày càng phù hợp và là đơn vị tiên
                                                                 phong trong nền kinh tế năng động ở cả trong và ngoài
                                                                 nước như hiện nay.</p>
@@ -277,7 +282,7 @@
                                                     <div style="text-align: justify;">
                                                         <div>
                                                             <p>Là một Công ty hoạt động với tiêu chí: lợi ích của đối
-                                                                tác và người lao động là trên hết vì vậy Tân Minh luôn
+                                                                tác và người lao động là trên hết vì vậy Vinh Thịnh Hải luôn
                                                                 cam kết hành động với các mục đính sau:</p>
                                                         </div>
                                                     </div>
