--- a/index.html
+++ b/index.html
@@ -41,25 +41,29 @@
                   Giới thiệu
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" target="blank_" href="./gioithieu/tongquancongty.html">Tổng quan công ty</a></li>
-                  <li><a class="dropdown-item" href="#">Cơ cấu tổ chức</a></li>
-                  <li><a class="dropdown-item" href="#">Khách hàng đối tác</a></li>
-                  <li><a class="dropdown-item" href="#">Chính sách nhân sự</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./gioithieu/tongquancongty.html">Tổng quan công
+                      ty</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./gioithieu/cocautochuc.html">Cơ cấu tổ chức</a>
+                  </li>
+                  <li><a class="dropdown-item" target="blank_" href="./gioithieu/khachhangdoitac.html">Khách hàng đối
+                      tác</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./gioithieu/chinhsachnhansu.html">Chính sách nhân
+                      sự</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" " id=" navbarDropdown" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Tin tức
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Tin công ty</a></li>
-                  <li><a class="dropdown-item" href="#">Tin công trình</a></li>
-                  <li><a class="dropdown-item" href="#">Tin đoàn thể</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./tintuc/tincongty.html">Tin công ty</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./tintuc/tincongtrinh.html">Tin công trình</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./tintuc/tindoanthe.html"> Tin đoàn thể</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Dự án
                 </a>
@@ -69,8 +73,9 @@
                       <div class="col-lg-3 col-md-6 col-sm-12">
                         <h6>Theo dự án</h6>
                         <ul>
-                          <li><a class="dropdown-item" href="#">Thiết kế thi công</a></li>
-                          <li><a class="dropdown-item" href="#">Dán dựng</a></li>
+                          <li><a class="dropdown-item" target="blank_" href="./duan/thietkethicong.html">Thiết kế thi
+                              công</a></li>
+                          <li><a class="dropdown-item" target="blank_" href="./duan/dandung.html">Dán dựng</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3 col-md-6 col-sm-12">
@@ -107,20 +112,20 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Thư viện
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Hình ảnh</a></li>
-                  <li><a class="dropdown-item" href="#">Video</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./thuvien/hinhanh.html">Hình ảnh</a></li>
+                  <li><a class="dropdown-item" target="blank_" href="./thuvien/video.html">Video</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Tuyển dụng</a>
+                <a class="nav-link active" aria-current="page" target="blank_" href="./tuyendung.html">Tuyển dụng</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
+                <a class="nav-link active" aria-current="page" target="blank_" href="./lienhe.html">Liên hệ</a>
               </li>
             </ul>
           </div>
@@ -222,11 +227,11 @@
             TRANG TRÍ NỘI NGOẠI THẤT</p>
         </div>
         <div data-aos="zoom-in" class="col-lg-3 col-md-6 col-sm-12">
-          <p class="set-media-sm"style="padding: 0 50px; text-align: center;">THI CÔNG
+          <p class="set-media-sm" style="padding: 0 50px; text-align: center;">THI CÔNG
             CÁC HẠNG MỤC CƠ KHÍ</p>
         </div>
         <div data-aos="zoom-in" class="col-lg-3 col-md-6 col-sm-12">
-          <p  class="set-media-sm"style="padding: 0 50px; text-align: center;">CUNG CẤP CÁC VẬT LIỆU
+          <p class="set-media-sm" style="padding: 0 50px; text-align: center;">CUNG CẤP CÁC VẬT LIỆU
             TRANG TRÍ NỘI NGOẠI THẤT</p>
         </div>
       </div>
@@ -386,12 +391,14 @@
     </div>
   </section>
   <div class="fixed-contract">
-    <div class="header-contract"><p ><i class="fa-solid fa-phone "></i></p>
+    <div class="header-contract">
+      <p><i class="fa-solid fa-phone "></i></p>
       <div class="support-contract">
         0905418161
       </div>
     </div>
-    <div class="header-contract"><p ><i class="fa-solid fa-envelope"></i></p>
+    <div class="header-contract">
+      <p><i class="fa-solid fa-envelope"></i></p>
       <div class="support-contract">
         hotro@dangkykinhdoanh.gov.vn
       </div>
